--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -43,6 +44,9 @@
             android:label="@string/home_name" />
         <activity
             android:name=".activities.SupportActivity"
+            android:label="@string/home_name" />
+        <activity
+            android:name=".activities.ChangePasswordActivity"
             android:label="@string/home_name" />
     </application>
 
