--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:icon="@mipmap/ic_only_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
 
         <activity
             android:name=".activities.SplashActivity"
@@ -41,6 +42,7 @@
             android:label="@string/home_name" />
         <activity
             android:name=".activities.OrderHistoryActivity"
+            android:launchMode="singleInstance"
             android:label="@string/home_name" />
         <activity
             android:name=".activities.SupportActivity"
@@ -48,6 +50,30 @@
         <activity
             android:name=".activities.ChangePasswordActivity"
             android:label="@string/home_name" />
+
+        <service
+            android:name=".services.MessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".services.FirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <!--<receiver android:name=".receivers.DeregisterEventReceiver">-->
+
+            <!--<intent-filter>-->
+                <!--<action android:name="CAKEMPOROS.LOGOUT">-->
+                <!--</action>-->
+            <!--</intent-filter>-->
+
+        <!--</receiver>-->
+
     </application>
 
 </manifest>
