--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -35,8 +37,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'de.greenrobot:greendao:2.1.0'
-    compile 'de.greenrobot:DaoGenerator:1.3.0'
+//    compile 'de.greenrobot:DaoGenerator:1.3.0'
     compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:multidex:1.0.1'
 
 
 }
